--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -25,10 +25,12 @@ ENTRYPOINT ["/tini", "--"]
 # Tag the image
 ARG BUILD_NUMBER
 ARG BUILD_DATE
+ARG GIT_REPO
 ARG GIT_BRANCH
 ARG GIT_COMMIT
 
 LABEL Build.Number="$BUILD_NUMBER" \
       Build.Date="$BUILD_DATE" \
+      Git.Repo="$GIT_REPO" \
       Git.Branch="$GIT_BRANCH" \
       Git.Commit="$GIT_COMMIT"
